--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "inventory-application",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.18.4"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.4.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
