--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.14.2",
     "hash-stream": "^1.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.4.4",
