--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async": "^3.2.4",
     "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
@@ -18,6 +19,7 @@
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
     "hash-stream": "^1.2.0",
+    "helmet": "^5.1.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.4.4",
     "morgan": "~1.9.1",
