--- a/package.json
+++ b/package.json
@@ -2,30 +2,62 @@
   "name": "inventory-application",
   "version": "0.0.0",
   "engines": {
-    "node": "12.18.4"
+    "node": "16.14.0",
+    "npm": "8.3.1"
   },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.165.0",
+    "@aws-sdk/lib-storage": "^3.165.0",
     "async": "^3.2.4",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
     "hash-stream": "^1.2.0",
-    "helmet": "^5.1.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.4.4",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.31.0"
   },
   "devDependencies": {
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19"
+  },
+  "eslintConfig": {
+    "extends": "airbnb-base",
+    "env": {
+      "es6": true,
+      "browser": true
+    },
+    "rules": {
+      "brace-style": [
+        "error",
+        "stroustrup"
+      ],
+      "comma-dangle": [
+        "error",
+        "never"
+      ],
+      "no-unused-vars": [
+        "warn"
+      ],
+      "no-var": [
+        "off"
+      ],
+      "one-var": [
+        "off"
+      ]
+    }
   }
 }
