--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.4.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.8",
     "sharp": "^0.31.0"
   },
   "devDependencies": {
